Opened 7 months ago

Closed 7 months ago

Last modified 6 months ago

#19068 closed bug (fixed)

[package_daemon] Wrong pair of colours when a question is asked to the user

Reported by: Starcrasher Owned by: bonefish
Priority: normal Milestone: R1/beta5
Component: Servers/package_daemon Version: R1/beta5
Keywords: Cc:
Blocked By: Blocking: #15946
Platform: All

Description

When the user user choice is needed a panel named Package problem is spawn. The panel contains a view with several choices. The problem is that the background and text colours don't match. It is in fact Panel_text_colour on List_background_colour. If for a reason or another the user has set one near or equal to the other, it becomes unreadable.

The solution would be to use a pair of colours that match document_background_colour and document_text_colour or list_background_colour and list_item_colour

Change History (4)

comment:1 by diver, 7 months ago

Component: Applications/SoftwareUpdaterServers/package_daemon
Owner: changed from perelandra to bonefish
Summary: [HaikuDepot][SoftwareUpdater] UI: Wrong pair of colours when a question is asked to the user.[package_daemon] Wrong pair of colours when a question is asked to the user

comment:2 by Starcrasher, 7 months ago

Thanks to John, it should be solved by using document colours in hrev58078.

comment:3 by waddlesplash, 7 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

Fixed in hrev58078 +beta5.

comment:4 by nephele, 6 months ago

Blocking: 15946 added
Note: See TracTickets for help on using tickets.